# scispacy-dockerized

./: Dockerfile  README.md  justfile  main.py  pyproject.toml
.github/workflows/: publish_image.yml
data/: fake_biomedical_notes.csv  fake_biomedical_notes_results.csv
examples/: client.py
scripts/: generate_fake_csv.py  publish-image.sh
